# ci-cd-experimentation

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: image_build_push.yml  run_tests.yml  tests.yml
app/: __main__.py
src/hello_world/: goodbye.py  hello_world.py
tests/: test_hello_world.py
