[metadata]
name = hello_world
description = python package template
author = Diogo Jerónimo
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    hello_world
python_requires = >=3.10
package_dir =
    =src
zip_safe = no
